--- a/qxrules.conf
+++ b/qxrules.conf
@@ -1,4 +1,4 @@
-hostname = *.wtzw.com, *.gotokeep.com, api.vuevideo.net, vni.kwaiying.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, 
+hostname = *.wtzw.com, *.gotokeep.com, api.vuevideo.net, vni.kwaiying.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, *.gotokeep.com, account.wps.cn, 
 
 
 
@@ -33,6 +33,9 @@ hostname = *.wtzw.com, *.gotokeep.com, api.vuevideo.net, vni.kwaiying.com, -redi
 # 扫描全能王 pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
 
+#CamScanner
+^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://qxnav.com/rules/QuantumultX/js/yue/CamScaner.js
+
 # PicsArt美易 pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js
 
@@ -45,3 +48,7 @@ hostname = *.wtzw.com, *.gotokeep.com, api.vuevideo.net, vni.kwaiying.com, -redi
 # 酷我音乐SVIP (By yxiaocai)
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
 ^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?uid\=\d+ url 302 http://musicpay.kuwo.cn/music.pay?uid=1
+
+# keep解锁会员    *.gotokeep.com
+^https://(.+).gotokeep.com(/athena/v5/people/my|/nuocha/plans) url script-response-body https://raw.githubusercontent.com/zwf234/rules/master/js/keep.js
+
